package com.wajam.mry.api.protobuf;
option optimize_for = LITE_RUNTIME;

message PTransport {
	optional PTransaction request = 1;
	repeated PTransactionValue response = 2;
}

message PTransaction {
	optional uint32 id = 1;
	optional PBlock innerBlock = 2;
}

message PResult {
	optional PError error = 1;
	repeated PTransactionValue data = 2;
}

message PError {
	required uint32 id = 1;
	required string message = 2;
}

message PBlock {
	required uint32 varSeq = 1;
	repeated POperation operations = 2;
	repeated PVariable variables = 3;

	optional PBlock parent = 5;
}

message PVariable {
	required uint32 block = 1;
	required uint32 id = 2;
	optional PTransactionValue value = 3;
}

message PTransactionValue {
    enum Type {
        NULL = 1;
        INT = 2;
        BOOL = 3;
        DOUBLE = 4;
        STRING = 5;
        BYTES = 6;
        ARRAY = 7;
        MAP = 8;
    }

    required Type type = 1;

	optional int64 int_value = 2;
	optional bool bool_value = 3;
	optional double double_value = 4;
	optional string string_value = 5;
	optional bytes bytes_value = 6;
	optional PTransactionCollection array = 7;
	optional PTransactionCollection map = 8;
}

message PTransactionCollection {
	repeated PTransactionCollectionValue values = 1;
}

message PTransactionCollectionValue {
	required PTransactionValue value = 1;
	optional string key = 2;
}

message PObject {
	optional PTransactionValue value = 1;
	optional PVariable variable = 2;
}

message POperation {
	enum Type {
		RETURN = 1;
    	FROM = 2;
    	GET = 3;
    	SET = 4;
    	DELETE = 5;
    	LIMIT = 6;
    	PROJECTION = 7;
	}

	optional Type type = 1;

	optional POperationWithFrom operationWithFrom = 2;
	optional POperationWithIntoAndObjects operationWithIntoAndObjects = 3;
}

message POperationWithFrom {
	repeated PVariable from = 1;
}

message POperationWithIntoAndObjects {
	optional PVariable into = 1;
	repeated PObject objects = 2;
}